# libgs

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  domain.h  gs.c  gs.h  socket.c  socket.h  tcp_socket.c  tcp_socket.h  unix_socket.c  unix_socket.h
tests/: CMakeLists.txt  receiver.c  sender.c
